Fork 2 TestNet (v0.6.0)
The ability to create an account state tree.
The ability to add new external peers to the peer network.